--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         
         <div class="chatbot-body">
             <div class="message-bot">
+                <h3>Bot:</h3>
                 <div class="message-text">Hey there!<br>How can I help you?</div>
             </div>
             <div class="typing">
@@ -50,6 +51,6 @@
         </div>
     </div>
 
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
